lsp: Updates are delayed on Windows
- Using Path instead of String URI throughout; this avoids encoding ambiguities that break equality of file URIs on Windows. E.g. "c:" may be encoded as "c%3A" in a URI.